cmake_minimum_required(VERSION 3.15)
project(SampleProj C)
add_executable(Task1a Task1a.c)
add_executable(Task1b Task1b.c)
add_executable(Task1c Task1c.c)
add_executable(Task1d Task1d.c)
add_executable(Task1e Task1e.c)
add_executable(Task2a Task2a.c)
add_executable(Task2b Task2b.c)
add_executable(Task3a Task3a.c linenoise.c linenoise.h)
add_executable(Task3b Task3b.c linenoise.c linenoise.h)
add_executable(Task3c Task3c.c linenoise.c linenoise.h)
add_executable(Task3d Task3d.c linenoise.c linenoise.h)
add_executable(Task4a Task4a.c linenoise.c linenoise.h)
add_executable(Task4b Task4b.c linenoise.c linenoise.h)
add_executable(Task4c Task4c.c linenoise.c linenoise.h)